<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/CardViewBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/card_header_icon"
            android:id="@+id/card_header_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:maxWidth="40dp"
            android:maxHeight="40dp"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/card_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_header_header"
            android:textSize="@dimen/card_header_font_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_header_icon"
            android:paddingTop="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_header_subhead"
            android:textSize="@dimen/card_subhead_font_size"
            app:layout_constraintTop_toBottomOf="@id/card_header"
            app:layout_constraintStart_toEndOf="@id/card_header_icon"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/card_img_foreground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-35dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-85dp"
            android:layout_marginStart="15dp"
            android:textSize="@dimen/card_header_font_size"
            android:text="@string/card_content_header"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body_subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/body_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:textSize="@dimen/card_subhead_font_size"
            android:text="@string/card_content_subhead"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/body_subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="100dp"
            android:text="@string/card_content_body"
            android:textSize="@dimen/button_text_font_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_button"
            android:textSize="@dimen/button_text_font_size"
            app:layout_constraintTop_toBottomOf="@id/body_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_button"
            android:textSize="@dimen/button_text_font_size"
            app:layout_constraintTop_toBottomOf="@id/body_text"
            app:layout_constraintEnd_toStartOf="@id/button_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>