<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_details_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/card_img_foreground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-100dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_with_id"
            app:layout_constraintTop_toBottomOf="@id/item_details_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-125dp"
            android:text="Кнопка с текстом id"
            android:textSize="@dimen/button_text_font_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_details_content_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_details_image"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/item_content_header"
            android:textSize="@dimen/card_header_font_size"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="-50dp"
            style="@style/ColoredTextView"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_details_content_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_details_content_header"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/item_content_body"
            android:textSize="@dimen/card_text_font_size"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="45dp"
            style="@style/ColoredTextView"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/item_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_details_content_body"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/switch_right_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/item_switch"
            app:layout_constraintStart_toEndOf="@id/item_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/item_switch"
            android:text="@string/item_switch_text"
            android:textSize="@dimen/switch_text_font_size"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_share"
            android:textSize="@dimen/button_text_font_size"
            app:layout_constraintTop_toBottomOf="@id/switch_right_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_like"
            android:textSize="@dimen/button_text_font_size"
            app:layout_constraintTop_toBottomOf="@id/switch_right_text"
            app:layout_constraintEnd_toStartOf="@id/button_share"
            android:layout_margin="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>